java/java-tests/testData/codeInsight/daemonCodeAnalyzer/annotations/incomplete.java
// IDEA-369310
@SuppressWarnings(<error descr="Incompatible types. Found: 'null', required: 'java.lang.String[]'">"unused".</error><error descr="Identifier expected">)</error>
class X {}